--- a/src/main/res/layout/item_share_action.xml
+++ b/src/main/res/layout/item_share_action.xml
@@ -9,8 +9,10 @@
 
     <ImageView
         android:id="@+id/icon"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:maxHeight="@dimen/share_item_icon_max_size"
+        android:maxWidth="@dimen/share_item_icon_max_size"
         tools:src="@android:drawable/btn_dialog" />
 
     <TextView
@@ -18,5 +20,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:textSize="@dimen/share_item_size"
         tools:text="Test" />
 </LinearLayout>
