--- a/src/main/res/layout/item_share_action_horizontal.xml
+++ b/src/main/res/layout/item_share_action_horizontal.xml
@@ -4,17 +4,19 @@
     android:id="@+id/item"
     android:layout_width="80dp"
     android:layout_height="match_parent"
-    android:paddingEnd="10dp"
-    android:paddingRight="10dp"
-    android:paddingStart="10dp"
-    android:paddingLeft="10dp"
     android:gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingEnd="10dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingStart="10dp">
 
     <ImageView
         android:id="@+id/icon"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:maxHeight="@dimen/share_item_icon_max_size"
+        android:maxWidth="@dimen/share_item_icon_max_size"
         tools:src="@android:drawable/btn_dialog" />
 
     <TextView
@@ -22,5 +24,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:textSize="@dimen/share_item_size"
         tools:text="Test" />
 </LinearLayout>
