--- a/styleablesharedialog/src/main/res/layout/item_share_action.xml
+++ b/styleablesharedialog/src/main/res/layout/item_share_action.xml
@@ -5,14 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="5dp">
 
     <ImageView
         android:id="@+id/icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:maxHeight="@dimen/share_item_icon_max_size"
-        android:maxWidth="@dimen/share_item_icon_max_size"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         tools:src="@android:drawable/btn_dialog" />
 
     <TextView
