--- a/styleablesharedialog/src/main/res/layout/item_share_action_horizontal.xml
+++ b/styleablesharedialog/src/main/res/layout/item_share_action_horizontal.xml
@@ -2,26 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item"
-    android:layout_width="80dp"
+    android:layout_width="90dp"
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    android:paddingEnd="10dp"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp"
-    android:paddingStart="10dp">
+    android:padding="10dp">
 
     <ImageView
         android:id="@+id/icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:maxHeight="@dimen/share_item_icon_max_size"
-        android:maxWidth="@dimen/share_item_icon_max_size"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         tools:src="@android:drawable/btn_dialog" />
 
     <TextView
         android:id="@+id/label"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="@dimen/share_item_size"
