--- a/styleablesharedialog/src/main/res/layout/item_share_action_single.xml
+++ b/styleablesharedialog/src/main/res/layout/item_share_action_single.xml
@@ -15,10 +15,8 @@
 
         <ImageView
             android:id="@+id/icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:maxHeight="@dimen/share_item_icon_max_size"
-            android:maxWidth="@dimen/share_item_icon_max_size"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             tools:src="@android:drawable/btn_dialog" />
 
         <TextView
