--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -1,68 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="ogiba.stylablesharedialog.InfoActivity"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:id="@+id/github_row"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp">
+        android:orientation="vertical"
+        tools:context="ogiba.stylablesharedialog.InfoActivity">
 
-        <TextView
-            android:id="@+id/github_label"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:text="Github project"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+            android:layout_height="wrap_content">
 
-        <TextView
+            <ImageView
+                android:id="@+id/app_icon"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/ic_launcher_styleablesharedialog" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/app_icon"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="@string/app_name"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/github_row"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/github_label"
-            android:layout_marginTop="5dp"
-            android:text="@string/info_activity_github_address" />
-    </RelativeLayout>
-    <RelativeLayout
-        android:id="@+id/developer_row"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp">
-        <TextView
-            android:id="@+id/developer_label"
+            android:padding="10dp">
+
+            <TextView
+                android:id="@+id/github_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:text="Github project"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:id="@+id/github_icon"
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/github_label"
+                android:src="@drawable/ic_github" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/github_icon"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_below="@+id/github_label"
+                android:layout_marginTop="5dp"
+                android:layout_toEndOf="@+id/github_icon"
+                android:layout_toRightOf="@+id/github_icon"
+                android:gravity="center_vertical"
+                android:text="@string/info_activity_github_address" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/developer_row"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:text="Developer"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/developer_label"
-            android:layout_marginTop="5dp"
-            android:text="@string/info_activity_linkedin_address" />
-    </RelativeLayout>
-</LinearLayout>
+            android:padding="10dp">
+
+            <TextView
+                android:id="@+id/developer_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:text="Developer"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:id="@+id/linkedin_icon"
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/developer_label"
+                android:src="@drawable/ic_linkedin_box_grey600_36dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/linkedin_icon"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_below="@+id/developer_label"
+                android:layout_marginTop="5dp"
+                android:layout_toEndOf="@+id/linkedin_icon"
+                android:layout_toRightOf="@+id/linkedin_icon"
+                android:gravity="center_vertical"
+                android:text="@string/info_activity_linkedin_address" />
+        </RelativeLayout>
+    </LinearLayout>
+</ScrollView>
