--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -13,17 +13,18 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:padding="10dp">
 
             <ImageView
                 android:id="@+id/app_icon"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="10dp"
                 android:src="@drawable/ic_launcher_styleablesharedialog" />
 
             <TextView
+                android:id="@+id/app_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
@@ -31,11 +32,19 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/app_icon"
+                android:layout_marginTop="5dp"
                 android:gravity="center"
-                android:padding="10dp"
                 android:text="@string/app_name"
                 android:textSize="20sp"
                 android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/app_title"
+                android:layout_marginTop="5dp"
+                android:text="@string/app_description" />
         </RelativeLayout>
 
         <RelativeLayout
